# rust-learning

./: README.md
guessing_game_book/: Cargo.toml
guessing_game_book/src/: main.rs
hello_cargo/src/: enums.rs  funtions.rs  generics.rs  main.rs  option.rs  structs.rs  tarit.rs  types.rs
hola-mundo/: Cargo.toml  texto_async.txt
hola-mundo/src/: borringing.rs  bucles.rs  closures.rs  condicional.rs  errors.rs  exercises.rs  for.rs  functions.rs  implementation.rs  iterators.rs  main.rs  match.rs  oop.rs  operations.rs  optiont.rs  package.rs  ranges.rs  shadowing.rs  test.txt  trait.rs
hola-mundo/src/async/: comunication.rs  filesystem.rs  introduction.rs
hola-mundo/src/package/: chrono.rs  crates.txt  github.rs  log.rs  reqwest.rs  serde.rs  tokio.rs
hola-mundo/src/paralelismo/: share.rs  threads.rs
my_api/: Cargo.toml  Rocket.toml
my_api/src/: main.rs
rust-ml-intro/: Cargo.toml
rust-ml-intro/src/: main.rs
thirtydays_book/: Cargo.toml  another_output.txt  append_example.txt  hello.txt  output.txt  sample_dat.txt
thirtydays_book/src/: arrays.rs  calculator.rs  characters.rs  colors.rs  controlflow.rs  copying.rs  functions.rs  geometry.rs  lib.rs  main.rs  randomnumber.rs  references.rs  scalar_data.rs  structs.rs  tuples.rs  variablesandmutability.rs
thirtydays_book/src/RC/: shared.rs  thread.rs
thirtydays_book/src/box/: recursive.rs  use.rs
variables_book/: Cargo.toml
variables_book/src/: enumsandpatterns.rs  functions.rs  loop.rs  main.rs  ownership.rs  rectangules.rs  references.rs  structs.rs  variables.rs
(+44 files in other folders)
