[package]
name = "hola-mundo"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.8"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "time" ,"full"] }
# tokio = { version = "1", features = ["macros"]}
reqwest = "0.11"
chrono = "0.4"
log = "0.4"
env_logger = "0.9"
miniserde = { git = "https://github.com/dtolnay/miniserde.git" }